--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Social media website dedicated to connecting mentors and mentees.",
   "main": "index.js",
   "dependencies": {
+    "client-sessions": "^0.8.0",
     "express": "^4.16.2",
     "mongodb": "^2.2.33",
     "mongoose": "^4.12.4",
