--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "devstart": "nodemon ./bin/www"
   },
   "dependencies": {
+    "axios": "^0.17.0",
     "body-parser": "~1.18.2",
     "client-sessions": "^0.8.0",
     "cookie-parser": "~1.4.3",
